--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "typescript": "^4.1.3"
   },
   "dependencies": {
+    "@material-ui/core": "^4.11.2",
     "next": "^10.0.4",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
